--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "test.js",
-            "use": "@vercel/node-server"
+            "src": "./test.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "test.js"
+            "dest": "/test.js"
         }
     ]
 }
